force-app/main/default/objects/Client_Contact__c/Client_Contact__c.object-meta.xml
<CustomObject>
    <label>Client Contact</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Officer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>