force-app/main/default/objects/Client_Contact__c/fields/Client_Location__c.field-meta.xml
<CustomField>
    <fullName>Client_Location__c</fullName>
    <formula>Location__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Location</label>
    <type>Text</type>
</CustomField>