force-app/main/default/objects/Client_Contact__c/fields/Duties__c.field-meta.xml
<CustomField>
    <fullName>Duties__c</fullName>
    <label>Duties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>