force-app/main/default/objects/Client_Contact__c/fields/INC_EXC__c.field-meta.xml
<CustomField>
    <fullName>INC_EXC__c</fullName>
    <label>Officer/Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>