force-app/main/default/objects/Client_Contact__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Client_Location__c</referenceTo>
    <relationshipLabel>Client Contacts</relationshipLabel>
    <relationshipName>Included_Excluded_Individuals</relationshipName>
    <type>Lookup</type>
</CustomField>