force-app/main/default/objects/Client_Contact__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Client Contacts</relationshipLabel>
    <relationshipName>Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>