force-app/main/default/objects/Client_Contact__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Contact</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Accting Record</fullName>
            </value>
            <value>
                <fullName>Claims Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>