force-app/main/default/objects/Client_Contact__c/fields/WC_Code__c.field-meta.xml
<CustomField>
    <fullName>WC_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WC Code</label>
    <referenceTo>WC_Code__c</referenceTo>
    <relationshipName>Included_Excluded_Individuals</relationshipName>
    <type>Lookup</type>
</CustomField>